@@ -1,5 +1,7 @@
 #!/bin/sh
 # OpenLGTV BCM backup script
+#  $1  - backup dir
+# [$2] = writable_only - make backup from writable partitions only
 
 # Make standard dump
 make_catdump=1
@@ -15,15 +17,17 @@ else
     back_dir=/mnt/usb1/Drive1
 fi
 
-echo "OpenLGTV BCM-INFO: Backup script running with \"$1\" argument..."
+echo "OpenLGTV BCM-INFO: Backup script running with \"$1\" and \"$2\" arguments..."
 
 cur_dir=`pwd`
 mkdir -p $back_dir
 cd $back_dir
-#cat /proc/mtd | sed 's/mtd\(.\):/mtd0\1:/'
-#for i in `cat /proc/mtd | grep -v erasesize | awk "BEGIN {printf \"mtd%02d_%s\", \"$1\", \"$4\"}" | sed 's/\"//g' | sed 's/://g'`
-for i in `cat /proc/mtd | grep -v erasesize | awk '{print $1 "_" $4}' | sed 's/\"//g' | sed 's/mtd\(.\):/mtd0\1/'`
-do
+if [ "$2" != "writable_only" ]
+then
+  #cat /proc/mtd | sed 's/mtd\(.\):/mtd0\1:/'
+  #for i in `cat /proc/mtd | grep -v erasesize | awk "BEGIN {printf \"mtd%02d_%s\", \"$1\", \"$4\"}" | sed 's/\"//g' | sed 's/://g'`
+  for i in `cat /proc/mtd | grep -v erasesize | awk '{print $1 "_" $4}' | sed 's/\"//g' | sed 's/mtd\(.\):/mtd0\1/'`
+  do
     if [ "$make_catdump" = "1" ]
     then
 	echo "Making standard backup of $i ..."
@@ -34,8 +38,11 @@ do
 	echo "Making nanddump backup of $i ..."
 	nanddump -f $back_dir/$i.nand /dev/`echo $i | sed 's/_.*//g' | sed 's/mtd0/mtd/g'`
     fi
-done
-if [ "$make_writable_tgz" = "1" ]
+  done
+fi
+echo "Trying to make NVRAM copy if dump exists..."
+cp -f /tmp/nvram* $back_dir/ > /dev/null 2>&1
+if [ "$make_writable_tgz" = "1" -o "$2" = "writable_only" ]
 then
     for mount_path in `cat /proc/mounts | egrep "yaffs|jffs2" | awk '{print $2}'`
     do
@@ -43,7 +50,5 @@ then
 	tar czvf `echo $mount_path | sed 's#^/##g' | sed 's#/#_#g'`.tar.gz $mount_path
     done
 fi
-echo "Making NVRAM copy ..."
-cp -f /tmp/nvram* $back_dir/
 echo "Backup DONE."
 cd $cur_dir
